force-app/main/default/objects/Error_Log__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Description of caught error</inlineHelpText>
    <label>Short Description</label>
    <type>TextArea</type>
</CustomField>