force-app/main/default/objects/Error_Log__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <inlineHelpText>Caught exception found in apex code</inlineHelpText>
    <label>Full Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>