force-app/main/default/objects/Error_Log__c/listViews/AfterBatchTrigger.listView-meta.xml
<ListView>
    <fullName>AfterBatchTrigger</fullName>
    <columns>NAME</columns>
    <columns>Origin__c</columns>
    <columns>Description__c</columns>
    <columns>Error__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>8/4/2020 12:00 AM</value>
    </filters>
    <label>AfterBatchTrigger</label>
</ListView>